# ee259-project

./: .gitignore  AssimpOptixRayTracer.cpp  AssimpOptixRayTracer.cu  AssimpOptixRayTracer.hpp  AsyncCudaBuffer.hpp  CMakeLists.txt  CUDABuffer.h  ExecutionCursor.hpp  INSTALL.md  LaunchParams.hpp  README.md  RaiiScopeLimitsLogger.hpp  cuda_optix_sentinel.h  ee259.cu  float3.hpp  glview.cpp  glview.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow_impl.cpp  mainwindow_impl.hpp  my_cuda_device_unique_ptr.hpp  my_optix_shader_binding_table_record.hpp  raytracingglview.hpp  test_AssimpOptixRayTracer.cpp  transmitter.hpp  xpu.hpp
meshes/: Cube.ply  Mia.ply  Plane.ply
